# truenas_pynetif

./: CLAUDE.md  pyproject.toml
.github/workflows/: mypy.yml
debian/: changelog  control  copyright  rules
truenas_pynetif/: bridge.py  ethernet_settings.py  interface.py  interface_state.py  lagg.py  netif.py  routing.py  utils.py  vlan.py
truenas_pynetif/address/: __init__.py  _link_helpers.py  address.py  bond.py  bridge.py  constants.py  dummy.py  get_ipaddresses.py  get_links.py  get_routes.py  ipv6.py  link.py  mixin.py  netlink.py  route.py  rule.py  types.py  vlan.py
truenas_pynetif/configure/: __init__.py  _common.py  bond.py  bridge.py  vlan.py
truenas_pynetif/diag/: __init__.py  constants.py  inet_diag.py
truenas_pynetif/ethtool/: __init__.py  constants.py  netlink.py
truenas_pynetif/netlink/: __init__.py  _core.py  _exceptions.py  dataclass_types.py
